Implement material category
Shows material items and fluids, plus a bit of other info